tests/fail/add_one_stack.avm
push int16(1)
add
exit
